force-app/main/default/objects/MBExpense__c/MBExpense__c.object-meta.xml
<CustomObject>
    <label>MBExpense</label>
    <nameField>
        <displayFormat>MBEX-{0000}</displayFormat>
        <label>MBExpense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBExpenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>