force-app/main/default/objects/MBExpense__c/fields/Auditor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Comments__c</fullName>
    <label>Auditor Remarks</label>
    <type>TextArea</type>
</CustomField>