force-app/main/default/objects/MBExpense__c/fields/Expense_Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Claim_Type__c</fullName>
    <label>Expense Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Business</fullName>
            </value>
            <value>
                <fullName>Sales Conference</fullName>
            </value>
            <value>
                <fullName>COVID-19 Home Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>