force-app/main/default/objects/MBExpense__c/fields/Total_Personal_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Personal_Expenses__c</fullName>
    <label>Total Personal Expenses</label>
    <summarizedField>MBExpenseItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>MBExpenseItem__c.Personal_Expense__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>MBExpenseItem__c.MBExpense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>