force-app/main/default/objects/MBExpense__c/fields/TotalExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalExpenses__c</fullName>
    <label>Total Expense</label>
    <summarizedField>MBExpenseItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>MBExpenseItem__c.Personal_Expense__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>MBExpenseItem__c.MBExpense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>