force-app/main/default/objects/MBExpense__c/validationRules/Expense_Header_Date_Checker.validationRule-meta.xml
<ValidationRule>
    <fullName>Expense_Header_Date_Checker</fullName>
    <active>true</active>
    <errorConditionFormula>Expense_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Expense_Date__c</errorDisplayField>
    <errorMessage>Expense reports cant be future dated.</errorMessage>
</ValidationRule>