force-app/main/default/objects/MBExpense__c/listViews/My_Expenses_List.listView-meta.xml
<ListView>
    <fullName>My_Expenses_List</fullName>
    <columns>NAME</columns>
    <columns>Expense_Date__c</columns>
    <columns>Expense_Claim_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>TotalExpenses__c</columns>
    <columns>Total_Personal_Expenses__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Expenses List</label>
</ListView>